--- a/JWT Authentication/appsettings.json
+++ b/JWT Authentication/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    //"defaultconnectionstring": "Data Source=;Initial Catalog=Jwt;User ID=;Password="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Key": "3KwZg6nc8m94b2MKUT0BdFbZGaRWETZ+avuClqYHBdc=", //for encription
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInDays": 30
+  }
 }
